# StrikerClips

./: .env.example  .gitignore  AUDIT.md  MARKETING.md  README.md  SPLIT.md  index.html  index.site.html  package-lock.json  package.json  push-to-github.ps1  tailwind.config.js  vite.config.ts  vite.site.config.ts
.cursor/rules/: shinobi-village.mdc  ss-tournaments.mdc
.github/workflows/: build-site.yml  deploy.yml  release.yml
docs/: cv-roadmap.md  stripe-setup.md  youtube-uploader.md
public/: manifest.json
public/game-profiles/: default.json  shinobi-strikers.json
scripts/: send-announcement.ts  youtube-uploader.ts
src/: App.tsx  index.css  main.tsx  site-main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AISettings.tsx  AdSlot.tsx  AuthGuard.tsx  AutoUploadButton.tsx  BrandLogo.tsx  CreationSponsorGate.tsx  CreatorPayoutsCard.tsx  DonateButton.tsx  InviteMenu.tsx  Layout.tsx  OBSPanel.tsx  PlayerChrome.tsx  ShareButtons.tsx  Sidebar.tsx  Soundboard.tsx  StatCheckQueue.tsx  StreamChat.tsx  SyncedYouTubeReel.tsx
src/hooks/: useAuth.ts  useEntitlements.ts  useFFmpeg.ts  useInviteContext.ts  useUnreadNotifications.ts
src/lib/: adConfig.ts  brand.ts  directorEngine.ts  downloads.ts  featureFlags.ts  ffmpegOps.ts  gameProfile.ts  highlightDetector.ts  localAi.ts  notifications.ts  obs.ts  ocrMatchResult.ts  reelLayout.ts  youtubeApi.ts  (+1 more)
supabase/: EMAIL_BRANDING.md  RUN_PENDING_MIGRATIONS.sql  SMASHHUB_FULL_SCHEMA.sql  config.toml
(+50 files in other folders)
